# mongo-bi-connector-odbc-driver

./: .bzrignore  .evg.yml  .gitmodules  BUILD.osx  BUILD.unix  BUILD.win  Build.bat  Build.sh  CMakeLists.txt  COPYING  ChangeLog  CreateBinaryMsi.bat  CreateBinaryZip.bat  CreateMakefiles.bat  CreateMakefiles.sh  CreateSourceZip.bat  CreateVisualStudioProjects.bat  EXCEPTIONS  INSTALL  INSTALL.linux  INSTALL.win  Install.bat  Install.bat.cmake  LICENSE.commercial  LICENSE.exceptions  LICENSE.gpl  MYODBC_CONF.h  MYODBC_MYSQL.h  MYODBC_ODBC.h  Makefile.am  Makefile.svn  PostBuildTest.bat  README  README.commercial  README.debug  README.dist  README.md  RELEASE.md  RemoveMakefiles.sh  Uninstall.bat  (+20 more)
MYODBCDbg/MYODBCDbgLib/: CMakeLists.txt  MYODBCDbgConnectAttrString.c  MYODBCDbgConnectOptionString.c  MYODBCDbgDiagFieldString.c  MYODBCDbgEnvAttrString.c  MYODBCDbgFunctionsString.c  MYODBCDbgGetFileDefault.c  MYODBCDbgHandleTypeString.c  MYODBCDbgInfoTypeString.c  MYODBCDbgLib.pro  MYODBCDbgLib.vpj  MYODBCDbgPosTypeString.c  MYODBCDbgReturnString.c  MYODBCDbgStmtAttrString.c  MYODBCDbgStmtOptionString.c  MYODBCDbgStmtTypeString.c  MYODBCDbgTransactionTypeString.c  Makefile.am
dltest/: CMakeLists.txt  Makefile.am  dltest.c  dltest.pro  dltest.vpj
driver/: CMakeLists.txt  Makefile.am  ansi.c  catalog.c  catalog.h  catalog_no_i_s.c  catalog_oldsvr.c  connect.c  cursor.c  desc.c  dll.c  driver.c  driver.def  driver.def.cmake  driver.h  driver.pro  driver.rc  driver.rc.cmake  error.c  error.h  execute.c  handle.c  info.c  my_prepared_stmt.c  my_stmt.c  myodbc3.c  myodbc3.def  myodbc3.h  myodbc3.rc  myutil.h  options.c  parse.c  parse.h  prepare.c  results.c  transact.c  unicode.c  unicode_transcode.c  utility.c
dsn-editor/: CMakeLists.txt  Makefile.am  main.cpp  myodbc3c.icns  myodbc3c.pro  myodbc3c.vpj
installer/: CMakeLists.txt  Makefile.am  myodbc-installer.c  myodbc3i.c  myodbc3i.pro
monitor/: CMakeLists.txt  Makefile.am  myodbc3m.c  myodbc3m.h  myodbc3m.pro
myodbc3/: Makefile.am  catalog.c  connect.c  cursor.c  dll.c  error.c  error.h  execute.c  handle.c  info.c  myodbc3.def  myodbc3.h  myodbc3.pro  myodbc3.rc  myodbc3.vpj  myutil.h  options.c  prepare.c  results.c  transact.c  utility.c
samples/: Makefile.am  WIN-Makefile  my_basics.c  my_connect.c  my_cursor.c  my_param.c  my_result.c  my_tran.c  my_utility.h  run-samples
scripts/: Makefile.am  make_binary_distribution.sh  makerpm.sh  myodbc3.spec.sh  scripts.vpj
scripts/macosx/: License.html.in  ReadMe.html.in  Welcome.html.in  postflight  postflight.in  postflight.in.cmake
setup/: CMakeLists.txt  ConfigDSN.c  MYODBCSetup.h  MYODBCSetupAssistText.cpp  MYODBCSetupAssistText.h  MYODBCSetupCheckBox.cpp  MYODBCSetupCheckBox.h  MYODBCSetupComboBox.cpp  MYODBCSetupComboBox.h  MYODBCSetupComboBoxDatabases.cpp  MYODBCSetupComboBoxDatabases.h  MYODBCSetupConfigDSNAdd.c  MYODBCSetupConfigDSNEdit.c  MYODBCSetupConfigDSNRemove.c  MYODBCSetupDataSourceConfig.cpp  MYODBCSetupDataSourceDialog.cpp  MYODBCSetupDataSourceDialog.h  MYODBCSetupDataSourceTab1.cpp  MYODBCSetupDataSourceTab1.h  MYODBCSetupDataSourceTab2.cpp  MYODBCSetupDataSourceTab2.h  MYODBCSetupDataSourceTab3.cpp  MYODBCSetupDataSourceTab3.h  MYODBCSetupDataSourceTab3a.cpp  MYODBCSetupDataSourceTab3a.h  MYODBCSetupDataSourceTab3b.cpp  MYODBCSetupDataSourceTab3b.h  MYODBCSetupDataSourceTab3c.cpp  MYODBCSetupDataSourceTab3c.h  MYODBCSetupDataSourceTab3d.cpp  MYODBCSetupDataSourceTab3d.h  MYODBCSetupDataSourceTab3e.cpp  MYODBCSetupDataSourceTab3e.h  MYODBCSetupDriverConnect.c  MYODBCSetupDriverConnectPrompt.cpp  MYODBCSetupHandleInstallerError.c  MYODBCSetupLineEdit.cpp  MYODBCSetupLineEdit.h  MYODBCSetupWriteConnectStr.c  Makefile.am  (+5 more)
setupgui/: CMakeLists.txt  ConfigDSN.c  callbacks.c  callbacks.h  mdbodbcS.def  setupgui.h  utils.c
setupgui/dialog/: callbacks.c  utils.c
setupgui/gtk/: ODBCINSTGetProperties.c  odbc.glade  odbcdialogparams.c  ui_xml.h
setupgui/odbcdialogparams/: TabCtrl.cpp  TabCtrl.h  tooltip.cpp
setupgui/windows/: TabCtrl.cpp  TabCtrl.h  main.cpp  odbcdialogparams.cpp  odbcdialogparams.h  odbcdialogparams.rc  resource.h  tooltip.cpp
test/: CMakeLists.txt  Makefile.am  Makefile.ini  README  my_auth.c  my_basics.c  my_basics.pro  my_blob.c  my_blob.pro  my_bug13766.c  my_bulk.c  my_bulk.pro  my_catalog.c  my_catalog.pro  my_catalog1.c  my_catalog2.c  my_col_length.c  my_crash.c  my_curext.c  my_curext.pro  my_cursor.c  my_cursor.pro  my_datetime.c  my_datetime.pro  my_desc.c  my_dyn_cursor.c  my_dyn_cursor.pro  my_error.c  my_error.pro  my_info.c  my_info.pro  my_keys.c  my_keys.pro  my_nodmw.c  my_param.c  my_param.pro  my_pooling.c  my_position.c  my_position.pro  my_prepare.c  (+29 more)
test/basics/: basics.pro  my_basics.c
test/blob/: blob.pro  my_blob.c
test/bugs_times/: bug25846.c
test/bulk/: bulk.pro  my_bulk.c
test/catalog/: catalog.pro  my_catalog.c
test/cmake/: generateinifiles.cmake
test/col_length/: col_length.pro  my_col_length.c
test/connect/: connect.pro  my_connect.c
test/curext/: curext.pro  my_curext.c
test/cursor/: cursor.pro  my_cursor.c
test/db_test/: db_test.c
test/dyn_cursor/: dyn_cursor.pro  my_dyn_cursor.c
test/error/: error.pro  my_error.c
test/imyodbc/: myodbc.c
test/include/: mytest3.h  odbctap.h
util/: CMakeLists.txt  MYODBCUtil.h  MYODBCUtilAllocDataSource.c  MYODBCUtilAllocDriver.c  MYODBCUtilClearDataSource.c  MYODBCUtilClearDriver.c  MYODBCUtilDSNExists.c  MYODBCUtilDefaultDataSource.c  MYODBCUtilFreeDataSource.c  MYODBCUtilFreeDriver.c  MYODBCUtilGetDataSourceNames.c  MYODBCUtilGetDriverNames.c  MYODBCUtilGetIniFileName.c  MYODBCUtilInsertStr.c  MYODBCUtilReadConnectStr.c  MYODBCUtilReadDataSource.c  MYODBCUtilReadDataSourceStr.c  MYODBCUtilReadDriver.c  MYODBCUtilWriteConnectStr.c  MYODBCUtilWriteDataSource.c  MYODBCUtilWriteDataSourceStr.c  MYODBCUtilWriteDriver.c  Makefile.am  installer.c  installer.h  odbcinstw.c  stringutil.c  stringutil.h  unicode_transcode.c  util.pro
wingui/: CMakeLists.txt  ConfigDSN.c  MYODBC_CONF.h  dialog.sln  myodbc5S.def  myodbc_mysql.h
wix/: README.TXT  (+6 more)
(+448 files in other folders)
